--- a/src/component/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/component/Navigation/NavigationItems/NavigationItems.module.css
@@ -6,6 +6,7 @@
     flex-flow: column;
     align-items: center;
     height     : 100%;
+    align-items: flex-end;
 }
 
 @media (min-width:500px){
